Fix module access error when running tests